@@ -1,5 +1,9 @@
 2007-07-28  Vitaly Alexeev <tishka92@yahoo.com>
 	
+	* gameswf/gameswf_value.h: a bit cleanup
+
+2007-07-28  Vitaly Alexeev <tishka92@yahoo.com>
+	
 	* gameswf/gameswf_action.cpp: null out object's members before deleting
 
 2007-07-26  Vitaly Alexeev <tishka92@yahoo.com>
